BYKL-641 Text wrap problem fixed

--- a/LMS.App/ClientApp/src/root/root/chat/chat.component.css
+++ b/LMS.App/ClientApp/src/root/root/chat/chat.component.css
@@ -27,6 +27,7 @@
 .message span {
   color: #64748b;
   font-size: 16px;
+  word-break: break-all;
 }
 
 .line-date span {
@@ -40,6 +41,6 @@ hr {
   border-color: #64748b;
 }
 
-.cursor_pointer{
+.cursor_pointer {
   cursor: pointer;
 }
